--- a/doc4j/并发编程基础知识.md
+++ b/doc4j/并发编程基础知识.md
@@ -44,10 +44,23 @@ JUC的全称是java.util.concurrent工具包的简称，是一个用来处理线
 **关键点** 是否是同时执行的，并行强调的是同一个时间范围内，但并发强调的是同一个时刻
 ### 用户线程和守护线程
 
-用户线程和守护线程的区别在于，用户线程是程序员创建的，而守护线程是 JVM 创建的。用户线程是平时用到的普通线程,自定义线程，守护线程运行在后台,是一种特殊的线程,比如垃圾回收
+用户线程和守护线程的区别在于
+1. 用户线程是程序员创建的，而守护线程是 JVM 创建的。
+2. 用户线程是平时用到的普通线程, 自定义线程，守护线程运行在后台,是一种特殊的线程,比如垃圾回收，应用指标统计。
 
 **当主线程结束后,用户线程还在运行,JVM 存活。如果没有用户线程,都是守护线程,JVM 结束**
-**区别之⼀是当最后⼀个⾮守护线程束时， JVM会正常退出，⽽不管当前是否存在守护线程，也就是说守护线程是否结束并不影响 JVM退出。换⽽⾔之，只要有⼀个⽤户线程还没结束，正常情况下JVM就不会退出**
+
+**区别之⼀是当最后⼀个⾮守护线程束时，JVM会正常退出，⽽不管当前是否存在守护线程，也就是说守护线程是否结束并不影响JVM退出。换⽽⾔之，只要有⼀个⽤户线程还没结束，正常情况下JVM就不会退出，与普通线程相比，守护线程的生命周期与主线程或其他非守护线程的生命周期无关。当所有非守护线程结束时，守护线程会自动被终止，不管它是否执行完毕。**
+
+**守护线程注意事项**
+
+守护线程的设置 setDaemon(true) 必须要放在线程的 start() 之前，否则程序会报错。也就是说在运行线程之前，一定要先确定线程的类型，并且线程运行之后是不允许修改线程的类型的。
+
+**创建守护线程**
+
+ - 通过 Thread.setDaemon(true) 方法将线程设置为守护线程
+ - 将线程池设置为守护线程
+   - 使用线程工厂 ThreadFactory 来设置了（线程池中的所有线程都是通过线程工厂创建的）
 
 ### 线程间的通信
 
