--- a/doc4j/并发编程基础知识.md
+++ b/doc4j/并发编程基础知识.md
@@ -65,10 +65,25 @@ JUC的全称是java.util.concurrent工具包的简称，是一个用来处理线
 ### 线程间的通信
 
 - volatile和synchronized关键字
-- 等待/通知机制（wait()/notify()）
-- 管道输⼊/输出流
+  - 基于 volatile 关键字来实现线程间相互通信是使用共享内存的思想。大致意思就是多个线程同时监听一个变量，当这个变量发生变化的时候 ，线程能够感知并执行相应的业务。这也是最简单的一种实现方式
+- 等待/通知机制（wait()/notify()/notifyAll()）
+  1. wait()：让当前线程处于等待状态，并释放当前拥有的锁；
+  2. notify()：随机唤醒等待该锁的其他线程，重新获取锁，并执行后续的流程，只能唤醒一个线程；
+  3. notifyAll()：唤醒所有等待该锁的线程（锁只有一把，虽然所有线程被唤醒，但所有线程需要排队执行）
+- 使用 Locks 和 Condition
+  1. await()：对应 Object 的 wait() 方法，线程等待；
+  2. signal()：对应 Object 的 notify() 方法，随机唤醒一个线程；
+  3. signalAll()：对应 Object 的 notifyAll() 方法，唤醒所有线程。
 - 使⽤Thread.join()
 - 使⽤ThreadLocal
+- 使用 Exchanger
+  - Exchanger 是一个用于线程间交换数据的同步点。两个线程可以在此同步点交换数据，Exchanger 的 exchange() 方法用于在两个线程之间交换数据。
+- 使用JUC工具类 CountDownLatch，Semaphore等
+- 基本 LockSupport 实现线程间的阻塞和唤醒
+  LockSupport 是一种非常灵活的实现线程间阻塞和唤醒的工具，使用它不用关注是等待线程先进行还是唤醒线程先运行，但是得知道线程的名字。
+  1. LockSupport.park()：休眠当前线程。
+  2. LockSupport.unpark(线程对象)：唤醒某一个指定的线程。
+  3. LockSupport 存在的必要性：前两种方法 notify 方法以及 signal 方法都是随机唤醒，如果存在多个等待线程的话，可能会唤醒不应该唤醒的线程，因此有 LockSupport 类下的 park 和 unpark 方法指定唤醒线程是非常有必要的。
 
 
 
