--- a/doc4j/死锁.md
+++ b/doc4j/死锁.md
@@ -4,10 +4,13 @@
 
 下面通过一个典型的例子来阐释死锁的现象
 
-    我们假设在以前，银行的转账操作还没有现在那么发达，大部分的业务操作都是要人为参与的。所以我们可以想象每一个用户在银行都有一个账本，用来记录每一次资金的操作
-    ，现在假设有个客户王五要到银行找柜员A做个转账业务：向张三转入100元，此时张三也找另外一个柜员B做转账业务：向王五转账100元，此时柜员A和B都会去拿账本进行操作
-    有一种可能，柜员A拿到了王五的账本，柜员B拿到了张三的账本，因为转账操作需要两个账本进行操作，所以柜员A拿到王五的账本后就等着拿张三的账本，同样柜员B拿到了张三的账本
-    后就等着拿王五的账本，这里要完成转账操作需要两个账本操作，但现在这种情况怎么办，这就是我们所谓的死锁的场景。
+    我们假设在以前，银行的转账操作还没有现在那么发达，大部分的业务操作都是要人为参与的。
+    所以我们可以想象每一个用户在银行都有一个账本，用来记录每一次资金的操作，现在假设有个
+    客户王五要到银行找柜员A做个转账业务：向张三转入100元，此时张三也找另外一个柜员B做转
+    账业务：向王五转账100元，此时柜员A和B都会去拿账本进行操作有一种可能，柜员A拿到了王五
+    的账本，柜员B拿到了张三的账本，因为转账操作需要两个账本进行操作，所以柜员A拿到王五的
+    账本后就等着拿张三的账本，同样柜员B拿到了张三的账本后就等着拿王五的账本，这里要完成转
+    账操作需要两个账本操作，但现在这种情况怎么办，这就是我们所谓的死锁的场景。
 
 ### 如何预防死锁
 
@@ -31,7 +34,7 @@
 
 ### 破坏占用且等待条件
 
-这个概念可以结合前面的故事来进行处理，生命的转账的例子中就是柜员分别持有一本账本，然后等待另外一本账本，但此时就会出现死等的状态。所以我们结合设计思想中**没什么是加一层中间件解决不了的，如果有
+这个概念可以结合前面的故事来进行处理，上面的转账的例子中就是柜员分别持有一本账本，然后等待另外一本账本，但此时就会出现死等的状态。所以我们结合设计思想中**没什么是加一层中间件解决不了的，如果有
 那就再加一层**。同理这里我们可以设置一个账本管理员，并且只有管理员才能操作账本，例如，如果柜员A需要申请王五和张三的账本，此时如果账本管理员发现现在只有王五的账本，这个时候账本管理员不
 会将单个账本给柜员，只有两本都在的时候才会给。这样就保证了“一次性申请所有资源。
 
@@ -56,9 +59,11 @@
 ### 具体操作
 
 1. 运行code4j中的Deadlock的代码运行结果如下
+
+   
 ![img.png](img.png)
 
-2. 打开命令行输入`jps -l`
+3. 打开命令行输入`jps -l`
 
 ![img_1.png](img_1.png)
 
@@ -72,7 +77,10 @@
 
 ![img_5.png](img_5.png)
 
-### 解决死锁的银行家算法 todo
+### 解决死锁的银行家算法 
+
+这篇博客写的就很好，给出了大部分的参考资料和例题解释
+https://blog.csdn.net/Q1743822183/article/details/139881674
 
 ### 修改之后的代码
 
