upload full content

--- a/Spring/循环依赖.md
+++ b/Spring/循环依赖.md
@@ -40,12 +40,44 @@ Spring 主要借助三级缓存来解决循环依赖问题：
 1. 一级缓存（singletonObjects）：用于存放已经完全创建好的单例 Bean，这些 Bean 可以直接被使用。
 2. 二级缓存（singletonFactories）：存放的是单例 Bean 的工厂对象，这些工厂对象可以创建早期的 Bean 实例。
 3. 三级缓存（earlySingletonObjects）：存放的是早期暴露的单例 Bean 实例，这些 Bean 还未完成属性注入和初始化。
+
+
 ## 什么情况下循环依赖可以被处理
 
 1. 出现循环依赖的Bean必须要是单例
 2. 依赖注入的方式不能全是构造器注入的方式
+
+
 ## Spring是如何解决的循环依赖
 
 1. 简单的循环依赖（没有AOP）
 2. 结合了AOP的循环依赖
 ## https://developer.aliyun.com/article/766880
+
+## 概括创建bean的三个过程
+
+1. 实例化，对应方法：```AbstractAutowireCapableBeanFactory```中的c```reateBeanInstance```方法
+2. 属性注入，对应方法：```AbstractAutowireCapableBeanFactory```的```populateBean```方法
+3. 初始化，对应方法：```AbstractAutowireCapableBeanFactory```的```initializeBean```
+
+
+也就是说
+
+1. 实例化，简单理解就是new了一个对象
+2. 属性注入，为实例化中new出来的对象填充属性
+3. 初始化，执行aware接口中的方法，初始化方法，完成AOP代理
+
+## 三级缓存
+
+1. ```singletonObjects```，一级缓存，存储的是所有创建好了的单例Bean
+2. ```earlySingletonObjects```，完成实例化，但是还未进行属性注入及初始化的对象
+3. ```singletonFactories```，提前暴露的一个单例工厂，二级缓存中存储的就是从这个工厂中获取到的对象
+
+## 没有AOP代理下的解决流程
+
+
+![img.png](img.png)
+
+## 结合了AOP的循环依赖
+
+![img_1.png](img_1.png)
