--- a/Spring/事务/事务的传播.md
+++ b/Spring/事务/事务的传播.md
@@ -141,3 +141,16 @@ NESTED 也是常用的一个传播类型，该方法的特性与 REQUIRED 非常
 |   REQUIRED   | 当前方法存在事务时，子方法加入该事务。此时父子方法共用一个事务，无论父子方法哪个发生异常回滚，整个事务都回滚。即使父方法捕捉了异常，也是会回滚。而当前方法不存在事务时，子方法新建一个事务。 |
 | REQUIRES_NEW | 无论当前方法是否存在事务，子方法都新建一个事务。此时父子方法的事务时独立的，它们都不会相互影响。但父方法需要注意子方法抛出的异常，避免因子方法抛出异常，而导致父方法回滚。 |
 |    NESTED    | 当前方法存在事务时，子方法加入在嵌套事务执行。当父方法事务回滚时，子方法事务也跟着回滚。当子方法事务发送回滚时，父事务是否回滚取决于是否捕捉了异常。如果捕捉了异常，那么就不回滚，否则回滚。 |
+
+
+## 事务传播的总结
+
+| 传播行为                    | 含义                                                         |
+| --------------------------- | ------------------------------------------------------------ |
+| `PROPAGATION_REQUIRED`      | 表示当前方法必须运行在事务中。如果当前事务存在，方法将会在该事务中运行。否则，会启动一个新的事务 |
+| `PROPAGATION_SUPPORTS`      | 表示当前方法不需要事务上下文，但是如果存在当前事务的话，那么该方法会在这个事务中运行 |
+| `PROPAGATION_MANDATORY`     | 表示该方法必须在事务中运行，如果当前事务不存在，则会抛出一个异常 |
+| `PROPAGATION_REQUIRED_NEW`  | 表示当前方法必须运行在它自己的事务中。一个新的事务将被启动。如果存在当前事务，在该方法执行期间，当前事务会被挂起。如果使用 JTATransactionManager 的话，则需要访问 TransactionManager |
+| `PROPAGATION_NOT_SUPPORTED` | 表示该方法不应该运行在事务中。如果存在当前事务，在该方法运行期间，当前事务将被挂起。如果使用 JTATransactionManager 的话，则需要访问 TransactionManager |
+| `PROPAGATION_NEVER`         | 表示当前方法不应该运行在事务上下文中。如果当前正有一个事务在运行，则会抛出异常 |
+| `PROPAGATION_NESTED`        | 表示如果当前已经存在一个事务，那么该方法将会在嵌套事务中运行。嵌套的事务可以独立于当前事务进行单独地提交或回滚。如果当前事务不存在，那么其行为与 PROPAGATION_REQUIRED 一样。注意各厂商对这种传播行为的支持是有所差异的。可以参考资源管理器的文档来确认它们是否支持嵌套事务 |
