--- a/Spring/循环依赖.md
+++ b/Spring/循环依赖.md
@@ -81,3 +81,31 @@ Spring 主要借助三级缓存来解决循环依赖问题：
 ## 结合了AOP的循环依赖
 
 ![img_1.png](img_1.png)
+
+## 循环依赖的N种场景
+
+![img_3.png](img_3.png)
+
+## 出现循环依赖如何解决
+
+![img_4.png](img_4.png)
+
+***生成代理对象产生的循环依赖*** 的解决方案：
+
+这类循环依赖问题解决方法很多，主要有：
+
+1. 使用 @Lazy 注解，延迟加载
+2. 使用 @DependsOn 注解，指定加载先后关系
+3. 修改文件名称，改变循环依赖类的加载顺序
+
+***使用@DependsOn产生的循环依赖*** 的解决方案：
+
+这类循环依赖问题要找到 @DependsOn 注解循环依赖的地方，迫使它不循环依赖就可以解决问题。
+
+***多例循环依赖*** 的解决方案：
+
+这类循环依赖问题可以通过把bean改成单例的解决。
+   
+***构造器循环依赖*** 的解决方案：
+
+这类循环依赖问题可以通过使用 @Lazy 注解解决
